# arbt-bot

./: .gitignore  README.md  USAGE.md  package.json
evm/: README.md  hardhat.config.js  package.json
evm/bot/: .env.example  index.js
evm/contracts/: ArbitrageFlashLoan.sol
evm/scripts/: deploy.js
shared/config/: tokens.js
solana/: README.md  package.json
solana/bot/: .env.example  index.js
solana/programs/arbitrage/: Cargo.toml
solana/programs/arbitrage/src/: lib.rs
