[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"
description = "Solana on-chain arbitrage program"
authors = ["ARBT Team"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.0"
thiserror = "1.0.40"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
borsh = "0.10.0"
bytemuck = { version = "1.13.1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
